5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1764_1576.log
== SUBMITION (2019-05-21 16:56:39) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.544763
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:56:43) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:57:15) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:57:21) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:57:45) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.591742
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
12
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:57:45) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.954403
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
10
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:57:46) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
1.53837
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:57:47) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
2.80606
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
10
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
18
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
12
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:57:47) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
2.92002
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:57:48) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
3.3024
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
18
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
12
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:57:53) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
2.67776
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:57:53) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
2.22602
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
12
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:57:55) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
2.42415
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:57:55) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
2.20435
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:57:57) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
3.11589
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:57:57) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
3.33835
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
18
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:01) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
2.50401
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
10
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:01) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
3.21143
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:02) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
2.46748
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:03) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
3.09912
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:03) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
2.68256
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:04) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
2.00699
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
12
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:06) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.205499
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1764/1576/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:07) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
2.20649
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:07) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
2.62984
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:07) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	else:
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
1.99955
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
18
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:59:21) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (vb[part] == 11) and (va[part] == 11) or (vb[part] == 22) and (va[part] == 22) or (vb[part] == 33) and (va[part] == 33):
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.409384
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:59:33) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (vb[part] == 11) and (va[part] == 11) or (vb[part] == 22) and (va[part] == 22) or (vb[part] == 33) and (va[part] == 33):
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:59:45) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (vb[part] == 11) and (va[part] == 11) or (vb[part] == 22) and (va[part] == 22) or (vb[part] == 33) and (va[part] == 33):
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.548846
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:59:58) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (vb[part] == 11) and (va[part] == 11) or (vb[part] == 22) and (va[part] == 22) or (vb[part] == 33) and (va[part] == 33):
		vb +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.543481
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:00:03) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (vb[part] == 11) and (va[part] == 11) or (vb[part] == 22) and (va[part] == 22) or (vb[part] == 33) and (va[part] == 33):
		bv +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.451962
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:00:13) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (vb[part] == 11) and (va[part] == 11) or (vb[part] == 22) and (va[part] == 22) or (vb[part] == 33) and (va[part] == 33):
		bv +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:00:50) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (vb[part] == 11) and (va[part] == 11) or (vb[part] == 22) and (va[part] == 22) or (vb[part] == 33) and (va[part] == 33):
		bv +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.45077
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:02:28) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (vb[part] == va[part]:
		bv +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.227189
-- ERROR:
  File "/home/codebench/codes/1764/1576/main.py", line 14
    elif (vb[part] == va[part]:
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:03:43) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (va[part] == vb[part]:
		bv +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- ERROR:
File "XXXX", line 14
    elif (va[part] == vb[part]:
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:03:58) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (va[part] == vb[part]):
		bv +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:04:01) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (va[part] == vb[part]):
		bv +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.526675
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:04:01) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (va[part] == vb[part]):
		bv +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:04:02) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (va[part] == vb[part]):
		bv +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.372531
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:04:15) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (va[part] == vb[part]):
		bv +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:04:42) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (va[part] == vb[part]):
		bv +=0
		ev +=0
	part += 1
print(part)
if(bv > ev):
	print("EUSAPIA")
elif(ev > bv):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:05:26) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (va[part] == vb[part]):
		bv +=0
		ev +=0
	part += 1
print(part)
if(ev > bv):
	print("EUSAPIA")
elif(bv > ev):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.524739
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:17:43) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
part = 0
ev = 0
bv = 0
while part < size(a):
	if (va[part] == 11) and (vb[part] == 22) or (va[part] == 22) and (vb[part] == 33) or (va[part] == 33) and (vb[part] == 11):
		bv += 1
	elif (vb[part] == 11) and (va[part] == 22) or (vb[part] == 22) and (va[part] == 33) or (vb[part] == 33) and (va[part] == 11):
		ev += 1
	elif (va[part] == vb[part]):
		bv +=0
		ev +=0
	part += 1
print(part)
if(ev > bv):
	print("EUSAPIA")
elif(bv > ev):
	print("BARSANULFO")
elif(ev == bv):
	print("EMPATE")
	

-- EXECUTION TIME:
0.592661
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
